--- a/Notebook Generator/template_header.tex
+++ b/Notebook Generator/template_header.tex
@@ -26,7 +26,6 @@
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
 \definecolor{mauve}{rgb}{0.58,0,0.82}
-
 %% Golang definition for listings
 %% http://github.io/julienc91/lstlistings-golang
 %%
@@ -58,10 +57,10 @@
   columns=flexible,
   basicstyle={\small\ttfamily},
   numbers=none,
-  % numberstyle=\tiny\color{gray},
-  % keywordstyle=\color{blue},
-  % commentstyle=\color{dkgreen},
-  % stringstyle=\color{mauve},
+   numberstyle=\color{gray},
+   keywordstyle=\color{blue},
+   commentstyle=\color{dkgreen},
+   stringstyle=\color{mauve},
   breaklines=true,
   breakatwhitespace=true,
   tabsize=2
